java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint1.pass
/*
 * AddCast1.java
 *
 * Created on March 12, 2005, 8:10 PM
 */

package org.netbeans.test.java.hints;

/**
 *
 * @author lahvac
 */
public class AddCast1 {
    
    /** Creates a new instance of AddCast1 */
    public AddCast1() {
        Object x = null;
        String s = (String) x;
    }
    
}
